new contact form

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -741,8 +741,8 @@ a {
   }
 }
 .cid-sLst7JWWlg {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
+  padding-top: 9rem;
+  padding-bottom: 9rem;
   background-color: #ffffff;
 }
 .cid-sLst7JWWlg .bg-twitter {
@@ -789,9 +789,6 @@ a {
   line-height: 55px;
   text-align: center;
   transition: all 0.3s ease-in-out;
-}
-.cid-sLst7JWWlg .iconfont-wrapper {
-  border-radius: 0 !important;
 }
 .cid-sLst7JWWlg [class^="socicon-"]:before,
 .cid-sLst7JWWlg [class*=" socicon-"]:before {
@@ -1248,60 +1245,55 @@ a {
     padding: 2rem;
   }
 }
-.cid-sLs124E3mO {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+.cid-sLxThYzSvT {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
   background-color: #ffffff;
 }
-.cid-sLs124E3mO .mbr-overlay {
-  background-color: #ffffff;
-  opacity: 0.4;
-}
-.cid-sLs124E3mO form .mbr-section-btn {
-  text-align: center;
-  width: 100%;
-}
-.cid-sLs124E3mO form .mbr-section-btn .btn {
-  display: inline-flex;
-}
-@media (max-width: 991px) {
-  .cid-sLs124E3mO form .mbr-section-btn .btn {
-    width: 100%;
+@media (min-width: 991px) {
+  .cid-sLxThYzSvT .container-fluid {
+    padding-left: 0;
   }
 }
-.cid-sLs1d45y0D {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  background: #ffffff;
+.cid-sLxThYzSvT .mbr-text,
+.cid-sLxThYzSvT .mbr-section-btn {
+  color: #232323;
 }
-.cid-sLs1d45y0D .google-map {
-  height: 30rem;
-  position: relative;
+@media (max-width: 991px) {
+  .cid-sLxThYzSvT .mbr-text,
+  .cid-sLxThYzSvT .mbr-section-btn {
+    text-align: center;
+  }
 }
-.cid-sLs1d45y0D .google-map iframe {
+@media (max-width: 991px) {
+  .cid-sLxThYzSvT .mbr-text,
+  .cid-sLxThYzSvT .mbr-section-title {
+    text-align: center;
+  }
+}
+.cid-sLxThYzSvT a.btn {
   height: 100%;
+  margin: 0;
+}
+.cid-sLxThYzSvT .mbr-section-btn {
+  display: flex;
+  margin-bottom: 1rem;
   width: 100%;
 }
-.cid-sLs1d45y0D .google-map [data-state-details] {
-  color: #6b6763;
-  height: 1.5em;
-  margin-top: -0.75em;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  position: absolute;
-  text-align: center;
-  top: 50%;
+.cid-sLxThYzSvT .mbr-section-btn .btn {
   width: 100%;
 }
-.cid-sLs1d45y0D .google-map[data-state] {
-  background: #e9e5dc;
+@media (max-width: 991px) {
+  .cid-sLxThYzSvT .image-wrapper {
+    margin-bottom: 2rem;
+  }
 }
-.cid-sLs1d45y0D .google-map[data-state="loading"] [data-state-details] {
-  display: none;
+.cid-sLxThYzSvT .justify-content-center {
+  align-items: center;
 }
 .cid-sLs1lHmIqf {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   background-color: #232323;
 }
 .cid-sLs1lHmIqf .row-links {
@@ -1743,8 +1735,8 @@ a {
   text-align: left;
 }
 .cid-sLs1lHmIqf {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   background-color: #232323;
 }
 .cid-sLs1lHmIqf .row-links {
@@ -2186,8 +2178,8 @@ a {
   }
 }
 .cid-sLs1lHmIqf {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   background-color: #232323;
 }
 .cid-sLs1lHmIqf .row-links {
@@ -2252,448 +2244,5 @@ a {
   width: 100%;
 }
 .cid-sLs1lHmIqf .media-container-row .row-copirayt p {
-  width: 100%;
-}
-.cid-sLsECnOJ9P {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #ffffff;
-}
-.cid-sLsECnOJ9P .card-wrapper {
-  background: #4479d9;
-  border-radius: 4px;
-}
-@media (max-width: 767px) {
-  .cid-sLsECnOJ9P .card-wrapper {
-    padding: 1rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-sLsECnOJ9P .card-wrapper {
-    padding: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-sLsECnOJ9P .card-wrapper {
-    padding: 4rem;
-  }
-}
-.cid-sLsECnOJ9P .mbr-text,
-.cid-sLsECnOJ9P .mbr-section-btn {
-  color: #ffffff;
-}
-.cid-sLsECnOJ9P .card-title,
-.cid-sLsECnOJ9P .card-box {
-  text-align: left;
-}
-.cid-sLsECoDoWj {
-  z-index: 1000;
-  width: 100%;
-  position: relative;
-  min-height: 60px;
-}
-.cid-sLsECoDoWj nav.navbar {
-  position: fixed;
-}
-.cid-sLsECoDoWj .dropdown-item:before {
-  font-family: Moririse2 !important;
-  content: '\e966';
-  display: inline-block;
-  width: 0;
-  position: absolute;
-  left: 1rem;
-  top: 0.5rem;
-  margin-right: 0.5rem;
-  line-height: 1;
-  font-size: inherit;
-  vertical-align: middle;
-  text-align: center;
-  overflow: hidden;
-  transform: scale(0, 1);
-  transition: all 0.25s ease-in-out;
-}
-.cid-sLsECoDoWj .dropdown-menu {
-  padding: 0;
-}
-.cid-sLsECoDoWj .dropdown-item {
-  border-bottom: 1px solid #e6e6e6;
-}
-.cid-sLsECoDoWj .dropdown-item:hover,
-.cid-sLsECoDoWj .dropdown-item:focus {
-  background: #6592e6 !important;
-  color: white !important;
-}
-.cid-sLsECoDoWj .nav-dropdown .link {
-  padding: 0 0.3em !important;
-  margin: .667em 1em !important;
-}
-.cid-sLsECoDoWj .nav-dropdown .link.dropdown-toggle::after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-}
-.cid-sLsECoDoWj .nav-link {
-  position: relative;
-}
-.cid-sLsECoDoWj .container {
-  display: flex;
-  margin: auto;
-}
-.cid-sLsECoDoWj .iconfont-wrapper {
-  color: #000000 !important;
-  font-size: 1.5rem;
-  padding-right: .5rem;
-}
-.cid-sLsECoDoWj .navbar-caption {
-  padding-right: 4rem;
-}
-.cid-sLsECoDoWj .dropdown-menu,
-.cid-sLsECoDoWj .navbar.opened {
-  background: #ffffff !important;
-}
-.cid-sLsECoDoWj .nav-item:focus,
-.cid-sLsECoDoWj .nav-link:focus {
-  outline: none;
-}
-.cid-sLsECoDoWj .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  transition: all 0.25s ease-in-out;
-}
-.cid-sLsECoDoWj .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-sLsECoDoWj .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
-  margin-left: -1.8rem;
-  padding-right: 1rem;
-  font-size: inherit;
-}
-.cid-sLsECoDoWj .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
-  display: inline-block;
-  transform: scale(1, 1);
-  transition: all 0.25s ease-in-out;
-}
-.cid-sLsECoDoWj .collapsed .dropdown-menu .dropdown-item:before {
-  display: none;
-}
-.cid-sLsECoDoWj .collapsed .dropdown .dropdown-menu .dropdown-item {
-  padding: 0.235em 1.5em 0.235em 1.5em !important;
-  transition: none;
-  margin: 0 !important;
-}
-.cid-sLsECoDoWj .navbar {
-  min-height: 77px;
-  transition: all .3s;
-  border-bottom: 1px solid transparent;
-  background: #ffffff;
-}
-.cid-sLsECoDoWj .navbar:not(.navbar-short) {
-  border-bottom: 1px solid #e6e6e6;
-}
-.cid-sLsECoDoWj .navbar.opened {
-  transition: all .3s;
-}
-.cid-sLsECoDoWj .navbar .dropdown-item {
-  padding: .5rem 1.8rem;
-}
-.cid-sLsECoDoWj .navbar .navbar-logo img {
-  width: auto;
-}
-.cid-sLsECoDoWj .navbar .navbar-collapse {
-  justify-content: flex-end;
-  z-index: 1;
-}
-.cid-sLsECoDoWj .navbar.collapsed .nav-item .nav-link::before {
-  display: none;
-}
-.cid-sLsECoDoWj .navbar.collapsed.opened .dropdown-menu {
-  top: 0;
-}
-@media (min-width: 992px) {
-  .cid-sLsECoDoWj .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3.8rem);
-  }
-}
-.cid-sLsECoDoWj .navbar.collapsed .dropdown-menu .dropdown-submenu {
-  left: 0 !important;
-}
-.cid-sLsECoDoWj .navbar.collapsed .dropdown-menu .dropdown-item:after {
-  right: auto;
-}
-.cid-sLsECoDoWj .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-  margin-left: 0.5rem;
-  margin-top: 0.2rem;
-  border-top: 0.35em solid;
-  border-right: 0.35em solid transparent;
-  border-left: 0.35em solid transparent;
-  border-bottom: 0;
-  top: 55%;
-}
-.cid-sLsECoDoWj .navbar.collapsed ul.navbar-nav li {
-  margin: auto;
-}
-.cid-sLsECoDoWj .navbar.collapsed .dropdown-menu .dropdown-item {
-  padding: .25rem 1.5rem;
-  text-align: center;
-}
-.cid-sLsECoDoWj .navbar.collapsed .icons-menu {
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: .5rem;
-  padding-bottom: .5rem;
-}
-@media (max-width: 991px) {
-  .cid-sLsECoDoWj .navbar .nav-item .nav-link::before {
-    display: none;
-  }
-  .cid-sLsECoDoWj .navbar.opened .dropdown-menu {
-    top: 0;
-  }
-  .cid-sLsECoDoWj .navbar .dropdown-menu .dropdown-submenu {
-    left: 0 !important;
-  }
-  .cid-sLsECoDoWj .navbar .dropdown-menu .dropdown-item:after {
-    right: auto;
-  }
-  .cid-sLsECoDoWj .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
-    margin-left: 0.5rem;
-    margin-top: 0.2rem;
-    border-top: 0.35em solid;
-    border-right: 0.35em solid transparent;
-    border-left: 0.35em solid transparent;
-    border-bottom: 0;
-    top: 55%;
-  }
-  .cid-sLsECoDoWj .navbar .navbar-logo img {
-    height: 3.8rem !important;
-  }
-  .cid-sLsECoDoWj .navbar ul.navbar-nav li {
-    margin: auto;
-  }
-  .cid-sLsECoDoWj .navbar .dropdown-menu .dropdown-item {
-    padding: .25rem 1.5rem !important;
-    text-align: center;
-  }
-  .cid-sLsECoDoWj .navbar .navbar-brand {
-    flex-shrink: initial;
-    flex-basis: auto;
-    word-break: break-word;
-    padding-right: 2rem;
-  }
-  .cid-sLsECoDoWj .navbar .navbar-toggler {
-    flex-basis: auto;
-  }
-  .cid-sLsECoDoWj .navbar .icons-menu {
-    padding-left: 0;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-  }
-}
-.cid-sLsECoDoWj .navbar.navbar-short {
-  min-height: 60px;
-}
-.cid-sLsECoDoWj .navbar.navbar-short .navbar-logo img {
-  height: 3rem !important;
-}
-.cid-sLsECoDoWj .navbar.navbar-short .navbar-brand {
-  padding: 0;
-}
-.cid-sLsECoDoWj .navbar-brand {
-  flex-shrink: 0;
-  align-items: center;
-  margin-right: 0;
-  padding: 0;
-  transition: all .3s;
-  word-break: break-word;
-  z-index: 1;
-}
-.cid-sLsECoDoWj .navbar-brand .navbar-caption {
-  line-height: inherit !important;
-}
-.cid-sLsECoDoWj .navbar-brand .navbar-logo a {
-  outline: none;
-}
-.cid-sLsECoDoWj .dropdown-item.active,
-.cid-sLsECoDoWj .dropdown-item:active {
-  background-color: transparent;
-}
-.cid-sLsECoDoWj .navbar-expand-lg .navbar-nav .nav-link {
-  padding: 0;
-}
-.cid-sLsECoDoWj .nav-dropdown .link.dropdown-toggle {
-  margin-right: 1.667em;
-}
-.cid-sLsECoDoWj .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
-  margin-right: 0;
-  padding: 0.667em 1.667em;
-}
-.cid-sLsECoDoWj .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
-}
-.cid-sLsECoDoWj .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-  left: 100%;
-}
-.cid-sLsECoDoWj .navbar .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-sLsECoDoWj ul.navbar-nav {
-  flex-wrap: wrap;
-}
-.cid-sLsECoDoWj .navbar-buttons {
-  text-align: center;
-  min-width: 170px;
-}
-.cid-sLsECoDoWj button.navbar-toggler {
-  outline: none;
-  width: 31px;
-  height: 20px;
-  cursor: pointer;
-  transition: all .2s;
-  position: relative;
-  align-self: center;
-}
-.cid-sLsECoDoWj button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: currentColor;
-}
-.cid-sLsECoDoWj button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all .2s;
-}
-.cid-sLsECoDoWj button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-sLsECoDoWj button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-sLsECoDoWj button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all .2s;
-}
-.cid-sLsECoDoWj nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-sLsECoDoWj nav.opened .hamburger span:nth-child(2) {
-  transform: rotate(45deg);
-  transition: all .25s;
-}
-.cid-sLsECoDoWj nav.opened .hamburger span:nth-child(3) {
-  transform: rotate(-45deg);
-  transition: all .25s;
-}
-.cid-sLsECoDoWj nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-sLsECoDoWj .navbar-dropdown {
-  padding: .5rem 1rem;
-  position: fixed;
-}
-.cid-sLsECoDoWj a.nav-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.cid-sLsECoDoWj .icons-menu {
-  flex-wrap: nowrap;
-  display: flex;
-  justify-content: center;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.3rem;
-  text-align: center;
-}
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .cid-sLsECoDoWj .navbar {
-    height: 77px;
-  }
-  .cid-sLsECoDoWj .navbar.opened {
-    height: auto;
-  }
-  .cid-sLsECoDoWj .nav-item .nav-link:hover::before {
-    width: 175%;
-    max-width: calc(100% + 2rem);
-    left: -1rem;
-  }
-}
-.cid-sLsECplOPH {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #232323;
-}
-.cid-sLsECplOPH .row-links {
-  width: 100%;
-  justify-content: center;
-}
-.cid-sLsECplOPH .social-row {
-  width: 100%;
-  justify-content: center;
-}
-.cid-sLsECplOPH .media-container-row {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.cid-sLsECplOPH .media-container-row .foot-menu {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 0;
-  margin-bottom: 0;
-}
-.cid-sLsECplOPH .media-container-row .foot-menu li {
-  padding: 0 1rem 1rem 1rem;
-}
-.cid-sLsECplOPH .media-container-row .foot-menu li p {
-  margin: 0;
-}
-.cid-sLsECplOPH .media-container-row .social-list {
-  width: auto;
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-}
-.cid-sLsECplOPH .media-container-row .social-list .mbr-iconfont-social {
-  font-size: 1.5rem;
-  color: #ffffff;
-}
-.cid-sLsECplOPH .media-container-row .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-sLsECplOPH .media-container-row .social-list a {
-  margin: 0;
-  opacity: .5;
-  transition: .2s linear;
-}
-.cid-sLsECplOPH .media-container-row .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-sLsECplOPH .media-container-row .social-list {
-    -webkit-justify-content: center;
-    justify-content: center;
-  }
-}
-.cid-sLsECplOPH .media-container-row .row-copirayt {
-  word-break: break-word;
-  width: 100%;
-}
-.cid-sLsECplOPH .media-container-row .row-copirayt p {
   width: 100%;
 }
